# advent-of-code-solutions

./: .gitignore  README.md
2019/01/python/: solve_2019-01_part-1.py  solve_2019-01_part-2.py
2019/02/python/: solve_2019-02_part-1.py
2020/01/python/: solve_2020-01.py
2020/02/python/: solve_2020-02_part-1.py  solve_2020-02_part-2.py
2020/03/python/: solve_2020-03_part-1.py  solve_2020-03_part-2.py
2020/04/python/: solve_2020-04_part-1.py  solve_2020-04_part-2.py
2020/05/cpp/: CMakeLists.txt
2020/05/cpp/src/: main.cpp  utils.cpp  utils.h
2020/05/cpp/test/: main_UT.cpp  test_utils.cpp
2020/06/cpp/: CMakeLists.txt
2020/06/cpp/src/: main_part1.cpp  main_part2.cpp
2020/07 - Handy Haversacks/python/: solve_2020-07_part1.py  solve_2020-07_part2.py
2020/08 - Handheld Halting/python/: solve_2020-08_part1.py  solve_2020-08_part2.py
2020/09 - Encoding Error/python/: solve_2020-09_part1.py  solve_2020-09_part2.py
2020/1/python/: main.py
2020/10 - Adapter Array/rust/: Cargo.toml
2020/10 - Adapter Array/rust/src/: main.rs
2020/11 - Seating System/rust/: Cargo.toml
2020/11 - Seating System/rust/src/: main.rs
